# clinicadl-zoo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE.txt  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: lint.yaml  test.yml
clinicadl_zoo/transforms/: __init__.py  enum.py  factory.py
clinicadl_zoo/transforms/config/: __init__.py  base.py  nan_removal.py  template.py
clinicadl_zoo/transforms/transforms/: __init__.py  nan_removal.py  template.py
contribute/: CONTRIBUTE_TRANSFORMS.md
tests/unittests/transforms/: test_all.py  test_factory.py
tests/unittests/transforms/factory/: test_nan_removal.py
tutorials/: transforms.ipynb
zoo/transforms/: __init__.py  enum.py  factory.py
zoo/transforms/config/: __init__.py  nan_removal.py  template.py
zoo/transforms/transforms/: __init__.py  nan_removal.py  template.py
