[tool.poetry]
name = "clinicadl_zoo"
version = "0.1.0"
description = "Community transforms and models for clinicadl"
license = "MIT"
authors = ["ARAMIS Lab"]
maintainers = ["Clinica developers <clinica-user@inria.fr>"]
readme = "README.md"
homepage = "https://clinicadl.readthedocs.io"
repository = "https://github.com/aramis-lab/clinicadl.git"
documentation =  "https://clinicadl.readthedocs.io"
keywords = [
    "bids",
    "image processing",
    "deep learning",
    "neuroimaging",
    "neuroscience"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
clinicadl = { git = "https://github.com/aramis-lab/clinicadl.git", branch = "clinicadl_v2" }

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = "*"
pytest-timeout = "*"
pytest-xdist = "*"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "I",
]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["clinicadl-zoo"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.codespell]
summary = ''
skip = ".git,LICENSE.txt,*.m,"
quiet-level = 3
ignore-words-list = "nd,fwe,commun,fo,te,artic,ressources,adn"

[tool.setuptools]
packages = ["clinicadl_zoo"]